--- a/data/style.css
+++ b/data/style.css
@@ -1982,3 +1982,29 @@ select {
     height: 18px;
     cursor: pointer;
 }
+
+.navbar-search-products-optionbox {
+    height: 50px;
+    box-shadow: 0px 5px 7px -2px rgba(0, 0, 0, 0.15);
+    background-color: white;
+}
+
+.button-sel-optbox {
+    border: none;
+    background-color: white;
+    cursor: pointer;
+    font-weight: 600;
+    font-size: 14px;
+    height: 100% !important;
+    width: 200px;
+}
+
+.button-sel-optbox:focus {
+    background-color: rgba(233, 233, 233, 0.487);
+}
+
+.navbar-search-products-adminorders {
+    height: 50px;
+    box-shadow: 0px 5px 7px -2px rgba(0, 0, 0, 0.15);
+    background-color: white;
+}
